--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "node-sass": "^4.11.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.4.5"
   }
 }
